# zxc

./: .env.dist  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
jwt_certs/: private-mock.pem  public-mock.pem
src/edu/: main.py
src/edu/application/commands/authentication/: login.py
src/edu/application/commands/user/: create_user.py
src/edu/application/common/: dto.py  pagination.py
src/edu/application/common/exceptions/: authentication.py  base.py  user.py
src/edu/application/common/ports/: id_generator.py  jwt_processor.py  request_manager.py  uow.py
src/edu/application/queries/user/: get_all_users.py  get_user_by_username.py
src/edu/bootstrap/: config.py  ioc.py  logging.py
src/edu/domain/classwork/: entity.py
src/edu/domain/common/: entity.py  exceptions.py
src/edu/domain/common/ports/: password_hasher.py
src/edu/domain/post/: entity.py
src/edu/domain/tier/: entity.py
src/edu/domain/user/: entity.py  exceptions.py  service.py  value_objects.py
src/edu/infrastructure/adapters/: id_generator.py  jwt_processor.py  password_hasher.py
src/edu/infrastructure/persistence/migrations/: env.py
src/edu/infrastructure/persistence/models/: __init__.py  base.py  setup.py  tier.py  user.py
src/edu/infrastructure/persistence/repositories/: base.py  user.py
src/edu/presentation/http/adapters/: request_manager.py
src/edu/presentation/http/common/: cookie_schema.py  exception_handler.py
src/edu/presentation/http/middlewares/: asgi_auth.py  setup.py
src/edu/presentation/http/routes/: authentication.py  tier.py  (+5 more)
(+7 files in other folders)
